@@ -44,6 +44,7 @@
  *   - + -mlist - list all available macros, support for descriptions embedded in macros (rev. 17)
  *   - % -mlist - optionally increase verbosity (rev. 17_b6)
  *   - % -mlist - additional optional verbosity increase (rev. 17_b7)
+ *   - % sort/filter argument order affects a dump operation (sort or filter first) (rev. 17_b8)
  *
  * v2.2:
  *
